@@ -30,7 +30,9 @@
  - Mod: Oracle cooldown on BHG movement shortened to a flat 5 minutes.
  - Mod: BHG Neutralization does not effect own alliance.
  - Mod: BHG Can no longer swap with seized hostiles.
+ - Mod: Spies have fewer useless options.
  - Mod: Invalid login attempts warns.
+ - Mod: Warnings about fissures shouldn't bother as many out of range.
 
 3.0908:
  - Mod: trash_messages_where now defaults to not returning deleted message IDs.
